# macro-factor-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: auth.rs  client.rs  firestore.rs  lib.rs  models.rs
tests/: integration.rs
