[package]
name = "macro-factor-api"
version = "0.3.0"
edition = "2021"
description = "Unofficial Rust client for reading MacroFactor data"
license = "MIT"
repository = "https://github.com/benthecarman/macro-factor-api"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15"
